[workspace.package]
license = "MIT"
edition = "2021"
rust-version = "1.84.0" # MSRV
homepage = "https://github.com/sensorfu/luomu-libpcap#readme"
repository = "https://github.com/sensorfu/luomu-libpcap"

[workspace]
resolver = "2"
members = [
	# "fuzz",
	"luomu-common",
	"luomu-libpcap",
	"luomu-libpcap-sys",
	"luomu-tpacketv3",
	"luomu-getifaddrs",
]

[workspace.dependencies]
# Our own crates
luomu-common.path = "luomu-common/"
luomu-libpcap.path = "luomu-libpcap/"
luomu-libpcap-sys.path = "luomu-libpcap-sys/"
luomu-tpacketv3.path = "luomu-tpacketv3/"
luomu-getifaddrs.path = "luomu-getifaddrs/"

# Third-party crates
anyhow = "1"
bitflags = "2"
cfg-if = "1"
env_logger = { version = "0.11", default-features = false }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
libc = { version = "0.2", features = ["extra_traits"] }
log = { version = "0.4", default-features = false }
quickcheck = { version = "1", default-features = false }
tokio = { version = "1", features = [ "rt-multi-thread", "sync" ] }
cc = "1"
liblzma = { version = "0.3", features = ["static"] }
tar = {version = "0.4", default-features = false }
clap = { version = "4", features = [ "derive" ] }

[workspace.lints.rust]
# Lint groups
deprecated-safe = { level = "deny", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms  = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }

# Lonely lints
missing_docs = { level = "deny", priority = -1 }
unsafe-code = "deny"

# Allow cfg(kani)
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# Remove these after moving to Rust 2024 edition
tail_expr_drop_order = "allow"
if_let_rescope = "allow"
