[workspace.package]
license = "MIT"
edition = "2024"
rust-version = "1.91.0" # MSRV
homepage = "https://github.com/sensorfu/luomu-libpcap#readme"
repository = "https://github.com/sensorfu/luomu-libpcap"

[workspace]
resolver = "3"
members = [
	# "fuzz",
	"luomu-common",
	"luomu-libpcap",
	"luomu-libpcap-sys",
	"luomu-tpacketv3",
	"luomu-getifaddrs",
]

[workspace.dependencies]
# Our own crates
luomu-common.path = "luomu-common/"
luomu-libpcap.path = "luomu-libpcap/"
luomu-libpcap-sys.path = "luomu-libpcap-sys/"
luomu-tpacketv3.path = "luomu-tpacketv3/"
luomu-getifaddrs.path = "luomu-getifaddrs/"

# Third-party crates
anyhow = "1"
bitflags = "2"
cfg-if = "1"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
libc = { version = "0.2", features = ["extra_traits"] }
quickcheck = { version = "1", default-features = false }
tokio = { version = "1", features = [ "rt-multi-thread", "sync" ] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
cc = "1"
liblzma = { version = "0.4", features = ["static"] }
tar = {version = "0.4", default-features = false }
clap = { version = "4", features = [ "derive" ] }

[workspace.lints.rust]
# Lint groups
deprecated-safe = { level = "deny", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms  = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }

# Lonely lints
missing_docs = { level = "deny", priority = -1 }
unsafe-code = "deny"

# Allow cfg(kani)
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
# See https://doc.rust-lang.org/nightly/clippy/lints.html
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

## Allows
# too early for this
must_use_candidate = "allow"
# Noisy lints
doc_markdown = "allow"
# Maybe once we start wrting proper docs, causes noise for now.
missing_errors_doc = "allow"
# Maybe need to be resolved one day
cast_ptr_alignment = "allow"
