[package]
name = "luomu-common"
description = "Common types and functions for network programming"
version = "0.1.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
readme = "README.md"
categories = [ "network-programming" ]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dev-dependencies]
quickcheck.workspace = true

[lints]
workspace = true
