[package]
name = "luomu-getifaddrs"
description = "Safe interface for getifaddrs()"
version = "0.1.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bitflags.workspace = true
cfg-if.workspace = true
libc.workspace = true
luomu-common.workspace = true
