[package]
name = "luomu-libpcap-sys"
version = "0.1.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

description = "Rusty libpcap bindings - The FFI layer"
homepage = "https://github.com/sensorfu/luomu-libpcap#readme"
repository = "https://github.com/sensorfu/luomu-libpcap"
documentation = "https://docs.rs/luomu-libpcap/"
readme = "README.md"
keywords = [ "pcap", "libpcap", "network" ]
categories = [ "api-bindings", "external-ffi-bindings", "network-programming", "no-std" ]

[dependencies]
libc = { version = "0.2", features = [ "extra_traits" ] }

[build-dependencies]
cc = "1"
libflate = "2"
tar = {version = "0.4", default-features = false }
