[package]
name = "luomu-libpcap-sys"
description = "Rusty libpcap bindings - The FFI layer"
version = "0.1.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
libc.workspace = true

[build-dependencies]
cc.workspace = true
liblzma.workspace = true
tar.workspace = true
