[package]
name = "luomu-libpcap"
description = "Rusty libpcap bindings"
version = "0.1.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
async-tokio = [ "dep:futures-core", "dep:tokio" ]

[dependencies]
libc.workspace = true
luomu-common.workspace = true
luomu-libpcap-sys.workspace = true
tracing.workspace = true

# async-tokio
futures-core = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
futures-util.workspace = true
luomu-libpcap = { workspace = true, features = [ "async-tokio" ] }
tokio = { workspace = true, features = [ "time" ] }
tracing-subscriber.workspace = true

[lints]
workspace = true
