[package]
name = "luomu-pcap-file"
version = "0.1.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
edition = "2021"
license = "MIT"

description = "pcap writer implemented in Rust"
homepage = "https://github.com/sensorfu/luomu-libpcap#readme"
repository = "https://github.com/sensorfu/luomu-libpcap"
documentation = "https://docs.rs/luomu-libpcap/"
readme = "README.md"
keywords = [ "pcap", "libpcap", "network" ]
categories = [ "network-programming" ]

[dependencies]
byteorder = "1"
libc = "0.2"
luomu-libpcap-sys = { path = "../luomu-libpcap-sys/" }

[dev-dependencies]
anyhow = "1"
env_logger = { version = "0.10", default-features = false }
luomu-libpcap = { path = "../luomu-libpcap/" }
tempfile = "3"
