[package]
name = "luomu-tpacketv3"
description = "Rust bindings for packet capture using AF_PACKET and tpacketv3 on linux"
version = "0.1.0"
authors = [ "Jukka Taimisto <jtaimisto@gmail.com>" ]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
libc.workspace = true
log.workspace = true
luomu-libpcap.workspace = true

[dev-dependencies]
clap.workspace = true
env_logger.workspace = true

[lints]
workspace = true
